--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,10 @@
     <string name="action_settings">Settings</string>
     <string name="press_me">Press Me</string>
     <string name="hello_android">Hello Android</string>
+    <string name="name">Name</string>
+    <string name="comment">Comment</string>
+    <string name="other">Other</string>
+    <string name="add_comment">Add a comment</string>
+    <string name="blank"></string>
 
 </resources>
