Implemented tutorials 8,9, and 10 which correspond to the Menus tutorail parts 1,2 and 3.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,5 +11,8 @@
     <string name="other">Other</string>
     <string name="add_comment">Add a comment</string>
     <string name="blank"></string>
-
+    <string name="twitter">Twitter</string>
+    <string name="facebook">Facebook</string>
+    <string name="refresh">Refresh</string>
+        
 </resources>
